font, spacing fixes for safari

--- a/less/global.less
+++ b/less/global.less
@@ -57,7 +57,6 @@ a {
 }
 
 nav {
-  letter-spacing: .5px;
   width: @nav-width;
   background-image: url("/images/1.jpg");
   background-position-x: 100%;
@@ -165,6 +164,7 @@ nav {
 }
 
 .nav-gradient {
+  letter-spacing: .5px;
   position: relative;
 
   &:after {
@@ -180,6 +180,7 @@ nav {
 
 .thin {
   font-family: "Raleway", "sans-serif";
+  font-weight: 200;
 }
 
 article {
@@ -212,6 +213,9 @@ section {
   }
   h1 {
     margin-top: 0;
+  }
+  .sub-intro {
+    font-weight: 100;
   }
 }
 
